Fixed spacing issues

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -258,3 +258,16 @@ th.keep-left3:first-child {
     }
   }
 }
+
+.edit-form {
+  width:565px;
+}
+
+.hint {
+  color:#959595;
+}
+
+.btn.btn-top {
+  margin-top:5px;
+  margin-bottom:20px;
+}
